<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tdk.problem8.MainActivity">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/colorWhite" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task" />

            <EditText
                android:id="@+id/editcongviec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content" />

            <EditText
                android:id="@+id/editnoidung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateFinish" />

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/3/2013"
                android:textColor="#FF0000" />

            <Button
                android:id="@+id/btndate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hourFinish" />

            <TextView
                android:id="@+id/txttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8:30 AM"
                android:textColor="#FF0000" />

            <Button
                android:id="@+id/btntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color1" />

    <Button
        android:id="@+id/btncongviec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addTask" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:text="@string/listTask"
        android:textColor="@color/colorWhite" />

    <ListView
        android:id="@+id/lvcongviec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
</LinearLayout>
